force-app/main/default/objects/Student_Result__c/Student_Result__c.object-meta.xml
<CustomObject>
    <label>Student Result</label>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>