force-app/main/default/objects/Student_Result__c/fields/Grades__c.field-meta.xml
<CustomField>
    <fullName>Grades__c</fullName>
    <formula>IF(
    Overall_Scores__c &gt; 90, &quot;A+&quot;,
    IF(
        Overall_Scores__c &gt;= 80, &quot;A&quot;,
        IF(
            Overall_Scores__c &gt;= 70, &quot;B+&quot;,
            IF(
                Overall_Scores__c &gt;= 60, &quot;B&quot;,
                IF(
                    Overall_Scores__c &gt;= 50, &quot;C&quot;,
                    &quot;F&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grades</label>
    <type>Text</type>
</CustomField>