force-app/main/default/objects/Student_Result__c/fields/Overall_Scores__c.field-meta.xml
<CustomField>
    <fullName>Overall_Scores__c</fullName>
    <formula>(Total_Marks_Scored__c  /  Total_Marks__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Scores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>