force-app/main/default/objects/Student_Result__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Student Results</relationshipLabel>
    <relationshipName>Student_Results</relationshipName>
    <type>Lookup</type>
</CustomField>