force-app/main/default/objects/Student_Result__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <label>Total Marks</label>
    <summarizedField>Student_Mark__c.Total_Marks__c</summarizedField>
    <summaryForeignKey>Student_Mark__c.Student_Result__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>