force-app/main/default/objects/Student_Result__c/fields/Total_Marks_Scored__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks_Scored__c</fullName>
    <label>Total Marks Scored</label>
    <summarizedField>Student_Mark__c.Marks_Scored__c</summarizedField>
    <summaryForeignKey>Student_Mark__c.Student_Result__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>